# jumparound

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pr_tasks.yaml  pytest.yaml
jumparound/: __init__.py  analyzer.py  cache.py  cli.py  config.py  match.py  tui.py
scripts/: gen-formula.py  gen_formula.py  setup-hooks.sh
scripts/hooks/: pre-commit
src/jumparound/: analyzer.py
tests/: test_jumparound.py  test_match.py
