[tool.poetry]
name = "jumparound"
version = "0.1.0"
description = "Quickly jump around between your projects."
authors = ["Matt Porter <mtp5129@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
textual = "^0.1.12"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jumparound = 'jumparound.cli:cli'
